[package]
name = "hifive-servos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwm-pca9685 = "0.3"
embedded-hal = "0.2"
hifive1 = { version = "0.11", features = ["board-hifive1-revb"] }
riscv = "0.10"
riscv-rt = "0.11"
panic-halt = "0.2.0"
paste = "1.0"
[profile.dev]
opt-level = 0
